Creation of StrigUtils and using in Exceptions